Fixes positioning on link to bottom left
Uses absolute positioning relative to the background image. Note that
there needs to be some bottom padding on the main content to ensure that
there isn't text overlap when the page flows down with a scroll bar.

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 .backgroundImageBox {
+  position: relative;
   min-height: 100vh;
   font-family: sans-serif;
   background: url('./images/ingredients.jpg');
@@ -31,6 +32,7 @@ body {
 .allContent {
   min-width: 600px;
   padding-top: 100px;
+  padding-bottom: 100px;
   padding-left: 5%;
   margin-left: auto;
   margin-right: 40%;
@@ -74,13 +76,17 @@ button:hover {
 
 .imageCredit {
   color: white;
+  font-size: 1.4rem;
+  font-style: italic;
+  font-family: bodyFont, sans-serif;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 
 a {
   color: white;
   text-decoration: none;
-  font-style: italic;
-  font-family: bodyFont, sans-serif;
 }
 
 a:clicked {
